<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/confirmation"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/carBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/carBrand"
        android:inputType="text" />

    <EditText
        android:id="@+id/carMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/carMark"
        android:inputType="text" />

    <EditText
        android:id="@+id/licenceNr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/licenceNr"
        android:ems="7"
        android:inputType="text" />

    <DatePicker
        android:id="@+id/dateComing"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/confirm" />

</LinearLayout>